[package]
name = "quant_trader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quant_trader"
path = "src/main.rs"

[dependencies]
hypersdk        = "0.2.10"
tokio           = { version = "1", features = ["full"] }
futures         = "0.3"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
rust_decimal    = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
anyhow          = "1"
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy         = "0.15"
chrono          = { version = "0.4", features = ["serde"] }
uuid            = { version = "1", features = ["v4"] }
parking_lot     = "0.12"
alloy           = { version = "1", features = ["signers"] }
nalgebra        = "0.33"
statrs          = "0.17"
tokio-stream    = "0.1"
